<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p1"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="170dp"
        android:layout_height="86dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_ecommerce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/editTextUsername"
        app:layout_constraintEnd_toEndOf="@id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_a_account"
        android:textColor="@color/primaryDarkColor"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
